Backend changes new entity rule and refresh token